<resources>
    <string name="app_name">Digital House Foods</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="or">OR</string>
    <string name="name">Name</string>
    <string name="repeatPassword">Repeat password</string>
</resources>