<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signin.view.SignInFragment"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmailSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:endIconMode="clear_text"
        app:boxBackgroundColor="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietEmailSignIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPasswordSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEmailSignIn"
        android:hint="@string/password"
        app:boxBackgroundColor="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignInLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:backgroundTint="@color/colorRed"
        android:background="@color/colorRed"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPasswordSignIn"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignInLogin">

        <TextView
            android:id="@+id/txtOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:text="@string/or" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/txtOr"
            android:background="@color/colorGrey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/txtOr"
            android:background="@color/colorGrey" />
    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignInRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        app:backgroundTint="@color/colorGrey"
        android:background="@color/colorGrey"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout"/>


</androidx.constraintlayout.widget.ConstraintLayout>